# serde-enum

./: Cargo.toml
examples/: 01-hello.rs
src/: lib.rs
