[package]
name = "serde-enum"
version = "0.1.0"
edition = "2018"
license = "MIT"
description = "Automaticly generates stringserde implementation for enums"
authors = ["sy1ntexx"]

[lib]
proc-macro = true

[[example]]
name = "01-hello"
path = "examples/01-hello.rs"

[dependencies]
serde = "1.0.0"
quote = "1.0.9"
proc-macro2 = "1.0.27"

[dependencies.syn]
version = "1.0.73"
features = ["full", "extra-traits"]